--- a/css/styles.css
+++ b/css/styles.css
@@ -58,9 +58,39 @@ h1{
 
     
 }
+
+h3{
+    
+    border-color: red;
+    border-width: 20px;
+}
+
+
 p{
    
     padding: 0%;
+}
+
+.skill-row{
+    display: inline-block;
+    text-align: justify;
+    width: 300px;
+    height: 150px;
+    padding-right: 100px;
+}
+.skill-row_right{
+    display: inline-block;
+    text-align: justify;
+    width: 300px;
+    height: 150px;
+    padding-left: 150px;
+}
+
+.img_man_skills{
+    height: 50px;
+    width: 50px;
+    text-align: center;
+
 }
 
     
