--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,20 @@ body{
 
 
 .top_container{
-    background-color: #DFF6FF;
+    background: linear-gradient(45deg, rgb(241, 133, 193), rgb(238, 240, 119));
     padding-top: 100px;
+    padding-bottom: 0px;
 
+}
+.anchor-button {
+    text-decoration: none;
+    background: linear-gradient(45deg, rgb(171, 144, 233), rgb(55, 176, 233));
+    padding: 10px 40px;
+    border-radius: 5px;
+    color: white;
+    font-weight: 700;
+    
+    display:inline-block;
 }
 .img_sun{
     
@@ -26,10 +37,13 @@ body{
     padding: 20px;
     height: 150px;
     width: 150px;
+    text-align: left;
 }
 
 .middle-container{
-    background-color: transparent;
+    background-color: #F2D7D9;
+    margin: 0px;
+    padding: 0px;
     
 }
 
@@ -46,8 +60,8 @@ body{
 }
 .bottom-cloud{
     position: absolute;
-    top: 200px;
-    left: 400px;
+    top: 250px;
+    left: 300px;
     
     
 }
@@ -55,6 +69,7 @@ h1{
     font-family: 'Sacramento', cursive;
     margin-top: 0px;
     margin-bottom: 5px;
+    font-size: 50px;
 
     
 }
@@ -62,28 +77,40 @@ h1{
 h3{
     
     border-color: red;
-    border-width: 20px;
+    border-width: 20px ;
+}
+.h2{
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+h2{
+    margin: 0px;
+    font-size: 30px;
 }
 
 
 p{
    
     padding: 0%;
+    font-size: 20px;
 }
 
 .skill-row{
-    display: inline-block;
+    
     text-align: justify;
     width: 300px;
     height: 150px;
     padding-right: 100px;
+    float: left;
+    padding-left: 50px;
 }
 .skill-row_right{
-    display: inline-block;
+    
     text-align: justify;
     width: 300px;
     height: 150px;
     padding-left: 150px;
+    float: right;
 }
 
 .img_man_skills{
@@ -91,6 +118,9 @@ p{
     width: 50px;
     text-align: center;
 
+}
+.profile{
+    margin: 0px;
 }
 
     
