--- a/css/styles.css
+++ b/css/styles.css
@@ -8,14 +8,14 @@ body{
 
 
 .top_container{
-    background: linear-gradient(45deg, rgb(241, 133, 193), rgb(238, 240, 119));
+    background: linear-gradient(45deg, rgb(235, 131, 183), rgb(52, 221, 137));
     padding-top: 100px;
     padding-bottom: 0px;
 
 }
 .anchor-button {
     text-decoration: none;
-    background: linear-gradient(45deg, rgb(171, 144, 233), rgb(55, 176, 233));
+    background: linear-gradient(45deg, rgb(219, 217, 89), rgb(51, 235, 14));
     padding: 10px 40px;
     border-radius: 5px;
     color: white;
@@ -95,32 +95,50 @@ p{
     font-size: 20px;
 }
 
+.skills{
+    padding-bottom: 20px;
+}
+
 .skill-row{
-    
+    display: inline-block;
     text-align: justify;
     width: 300px;
     height: 150px;
     padding-right: 100px;
     float: left;
-    padding-left: 50px;
+    padding-left: 250px;
+    
 }
 .skill-row_right{
-    
+    display: inline-block;
     text-align: justify;
     width: 300px;
     height: 150px;
     padding-left: 150px;
-    float: right;
+   float: none;
 }
 
 .img_man_skills{
     height: 50px;
     width: 50px;
     text-align: center;
+    border-radius: 50%;
 
 }
 .profile{
     margin: 0px;
 }
+
+.bottom_button {
+    text-decoration: none;
+    background: linear-gradient(45deg, #1363DF, rgb(55, 176, 233));
+    padding: 10px 10px 10px 10px;
+    border-radius: 50%;
+    color: white;
+    font-weight: 700;
+    
+    display:inline-block;
+}
+
 
     
